calcolo ore di lavoro

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
-
+    <header></header>
     <main>
         <section>
             <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -71,56 +68,53 @@
 
             <div class="container py-5">
                 <section>
-                        <h1>Richiesta preventivo</h1>
-                        <p>Compila il forum per richiedere un preventivo per i nostri servizi di sviluppo
-                        <p>
+                    <h1>Richiesta preventivo</h1>
+                    <p>Compila il forum per richiedere un preventivo per i nostri servizi di sviluppo<p>
                     <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <form action="" id="request-quote">
-                            <div class="mb-3">
-                                <label for="nameInput" class="form-label">Nome</label>
-                                <input type="name" class="form-control" id="nameInput">
-                            </div>
-                            <div class="mb-3">
-                                <label for="surnameInput" class="form-label">Cognome</label>
-                                <input type="surname" class="form-control" id="surnameInput">
-                            </div>
-                            <div class="mb-3">
-                                <label for="emailInput" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="emailInput">
-                            </div>
-                            <div class="mb-3">
-                                <label for="work" class="form-label">Tipo di lavoro</label>
-                                <select class="form-select" id="work">
-                                    <option selected>Tipo di lavoro</option>
-                                    <option value="backendDevelopment">Sviluppo backend</option>
-                                    <option value="frontendDevelopment">Sviluppo frontend</option>
-                                    <option value="projectAnalysis">Analisi progettuale</option>
-                                </select>
-                            </div>
+                        <div class="col-12 col-lg-8">
+                            <form action="" id="request-quote">
+                                <div class="mb-3">
+                                    <label for="nameInput" class="form-label">Nome</label>
+                                    <input type="name" class="form-control" id="nameInput">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="surnameInput" class="form-label">Cognome</label>
+                                    <input type="surname" class="form-control" id="surnameInput">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="emailInput" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="emailInput">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="work" class="form-label">Tipo di lavoro</label>
+                                    <select class="form-select" id="work">
+                                        <option selected>Tipo di lavoro</option>
+                                        <option value="backendDevelopment">Sviluppo backend</option>
+                                        <option value="frontendDevelopment">Sviluppo frontend</option>
+                                        <option value="projectAnalysis">Analisi progettuale</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="exampleFormControlTextarea1" class="form-label">Textarea con bootstrap
+                                        5</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                                </div>
 
-                            <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Textarea con bootstrap
-                                    5</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-                            </div>
-
-                            <div class="mb-3 form-privacy">
-                                <input type="checkbox" class="form-check-input" id="formPrivacy">
-                                <label class="form-check-label" for="formPrivacy">Accetto la Privacy Policy</label>
-                            </div>
-                            <div class="d-grid gap-2 col-6 mx-auto">
-                                <button type="preventive" class="btn btn-primary">Calcola preventivo</button>
-                                <h2>Prezzo finale €</h2>
-                            </div>
-
-
-                        </form>
-                    </div>
+                                <div class="mb-3 form-privacy">
+                                    <input type="checkbox" class="form-check-input" id="formPrivacy">
+                                    <label class="form-check-label" for="formPrivacy">Accetto la Privacy Policy</label>
+                                </div>
+                                <div class="d-grid gap-2 col-6 mx-auto">
+                                    <button type="preventive" class="btn btn-primary">Calcola preventivo</button>
+                                    <h2 class="m-2">Prezzo finale €</h2>
+                                </div>
+                            </form>
+                        </div>
                 </section>
                 <section>
-                    <div class="card col-12 col-lg-4 m-5" style="width: 18rem;">
-                        <img src="./img/bravo-sviluppatore-web-cercando-interessati-durante-il-lavoro-nel-suo-ufficio-mjgmd4.jpg" class="card-img-top" alt="...">
+                    <div class="col-12 col-lg-4">
+                        <img src="./img/bravo-sviluppatore-web-cercando-interessati-durante-il-lavoro-nel-suo-ufficio-mjgmd4.jpg"
+                            class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">I nostri servizi</h5>
                             <p class="card-text">Se hai bisogno di aiuto puoi contattarci.</p>
