Assegnazione codice sconto

--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
                                     <input type="checkbox" class="form-check-input" id="formPrivacy">
                                     <label class="form-check-label" for="formPrivacy">Accetto la Privacy Policy</label>
                                 </div>
-                                <div class="d-grid gap-2 col-6 mx-auto">
-                                    <button type="preventive" class="btn btn-primary">Calcola preventivo</button>
-                                    <h2 class="m-2" id="finalPride">Prezzo finale €</h2>
-                                </div>
+                                <section>
+                                    <div class="d-grid gap-2 col-6 mx-auto">
+                                        <button type="preventive" class=" col-12 md-3 btn btn-primary">Calcola preventivo</button>
+                                        <h2 class="col-12 md-3 m-2" id="finalPride">Prezzo finale €</h2>
+                                    </div>
+                                </section>
                             </form>
                         </div>
                 
