--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <button type="submit" id="preventive-btn" class="btn btn-primary mt-3">Calcola Preventivo</button>
               </div>
             </div>
-            <div class="m-3 col-12 col-md-3">
-              <div class="">
+            <div class="m-3 col-12 col-lg-6 ">
+              <div>
                 <p id="message">Prezzo €</p>
               </div>
             </div>
@@ -83,7 +83,7 @@
 
       <section class="col-12 col-lg-6">
         <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./img/bravo-sviluppatore-web-cercando-interessati-durante-il-lavoro-nel-suo-ufficio-mjgmd4.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">I nostri servizi</h5>
             <p class="card-text">Se hai bisogno di aiuto puoi contattarci.</p>
