Modifica_html_js

--- a/index.html
+++ b/index.html
@@ -61,12 +61,20 @@
               </select>
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+              <label for="exampleFormControlTextarea1" class="form-label">E xample textarea</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="mb-3">
               <label for="code">Codice Promozionale (opzionale)</label>
               <input class="form-control" type="text" id="code" autocomplete="off">
+            </div>
+            <div class="col-12 ">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="privacy">
+                <label class="form-check-label" for="privacy">
+                  Accetta la Privacy policy
+                </label>
+              </div>
             </div>
             <div class="row">
               <div class="col-12 col-md-3">
@@ -83,7 +91,7 @@
 
       <section class="col-12 col-lg-6">
         <div class="card" style="width: 18rem;">
-          <img src="./img/bravo-sviluppatore-web-cercando-interessati-durante-il-lavoro-nel-suo-ufficio-mjgmd4.jpg" class="card-img-top" alt="...">
+          <img src="./img/bravo-sviluppatore-web-cercando-interessati-durante-il-lavoro-nel-suo-ufficio-mjgmd4.jpg " class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">I nostri servizi</h5>
             <p class="card-text">Se hai bisogno di aiuto puoi contattarci.</p>
