--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </select>
             </div>
             <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">E xample textarea</label>
+              <label for="exampleFormControlTextarea1" class="form-label">Textarea con Bootstrap 5</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="mb-3">
@@ -105,7 +105,6 @@
             <a href="#" class="card-link">Help desk</a>
           </div>
       </section>
-
     </div>
     </div>
   </main>
